# ARvatar

./: .gitignore  engineering_design.md
product_website/: README.md  index.html  script.js  styles.css
vortex_device/: CMakeLists.txt  vortex_design_engineeing_design_doc.md  voxel_demo
vortex_device/docs/: vortex_design_engineeing_design_doc.md
vortex_device/proto/voxel/asset/v1/: asset_service.proto
vortex_device/proto/voxel/dialogue/v1/: dialogue_service.proto
vortex_device/src/: GrpcClient.cpp  GrpcClient.h  VoxelRenderer.cpp  VoxelRenderer.h  device_client.cc  main.cpp
vortex_device/src/components/: GrpcClient.cpp  GrpcClient.h  VoxelRenderer.cpp  VoxelRenderer.h
vortex_device/src/models/: CylinderVox.cpp  CylinderVox.h
vortex_device/vortex_simulator/: vortex_setup.md
vortex_service/: .gitignore  Dockerfile  docker-compose.yaml  pom.xml  vortex-service.ipr  vortex-service.iws
vortex_service/data/.minio.sys/: format.json
vortex_service/docs/: architecture_design.md
vortex_service/proto/voxel/asset/v1/: asset_service.proto
vortex_service/proto/voxel/common/v1/: types.proto
vortex_service/proto/voxel/ingest/v1/: ingest_service.proto
vortex_service/src/main/java/com/arvatar/vortex/: VortexServiceApplication.java
vortex_service/src/main/java/com/arvatar/vortex/config/: DatabaseConfig.java  DatabaseProperties.java  GrpcServerConfig.java  StorageConfiguration.java  StorageProperties.java  WorkflowConfiguration.java  WorkflowProperties.java
vortex_service/src/main/java/com/arvatar/vortex/controller/: AssetController.java  DialogueController.java
vortex_service/src/main/java/com/arvatar/vortex/dto/: ASRJob.java  AsrPcdJob.java  JobBlob.java  JobStatus.java  MinIOS3Client.java  MinioS3AsyncClient.java
vortex_service/src/main/java/com/arvatar/vortex/grpc/: AssetGrpcService.java  DialogueGrpcService.java
vortex_service/src/main/java/com/arvatar/vortex/models/: AsrPcdJob.java  Intention.java  JobStatus.java  PersonProfile.java  PersonaChunk.java
vortex_service/src/main/java/com/arvatar/vortex/service/: AsrService.java  AsrWorkflowService.java  AssetService.java  AutomaticTranscriptionService.java  DatabaseWriter.java  DialogueService.java  LLMService.java  PcdService.java  PcdWorkflowService.java
vortex_service/src/main/java/com/arvatar/vortex/temporal/: TemporalConfig.java  TemporalProperties.java
vortex_service/src/main/java/com/arvatar/vortex/temporal/activities/: AsrActivities.java  AsrActivitiesImpl.java  PcdActivities.java  PcdActivitiesImpl.java
vortex_service/src/main/java/com/arvatar/vortex/temporal/workflow/: AsrWorkflow.java  AsrWorkflowImpl.java  PcdWorkflow.java  PcdWorkflowImpl.java
vortex_service/src/main/java/com/arvatar/vortex/worker/: WorkerNode.java
vortex_service/src/main/java/com/arvatar/vortex/workflow/: ASRActivities.java  ASRActivitiesImpl.java  ASRWorkflow.java  ASRWorkflowImpl.java  faster-whisper-python-wrapper.py
vortex_service/src/main/proto/voxel/common/v1/: types.proto
vortex_service/src/main/proto/voxel/dialogue/v1/: dialogue_service.proto
vortex_service/src/main/resources/: application.yml
